# website

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html  stellation.toml
.github/: dependabot.yml
.github/workflows/: website.yml
crates/client/: Cargo.toml
crates/client/src/: app.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  main.rs
crates/stctl/: Cargo.toml
crates/view/: Cargo.toml
crates/view/src/: banner.rs  lib.rs  theme.rs  view.rs
src/: app.rs  banner.rs  bg_spin.rs  main.rs  theme.rs
website-helper/: pyproject.toml
website-helper/website_helper/: __main__.py
