[package]
name = "bounce-website"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { version = "0.3.0", features = ["helmet"] }
once_cell = "1.13.0"
stylist = { version = "0.10.1", features = ["yew_integration"] }
yew = "0.19.3"
yew-feather = "0.2.1"
