[package]
name = "bounce-website"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { version = "0.7.0", features = ["helmet"] }
once_cell = "1.13.0"
stylist = { version = "0.12.1", features = ["yew_integration"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-feather = "1.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
