[tool.poetry]
name = "website-helper"
version = "0.1.0"
description = ""
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]

[tool.poetry.scripts]
website-helper = 'website_helper.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.15.3"
click = "^8.0.3"
click-help-colors = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.9.3"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"
flake8-2020 = "^1.6.0"
flake8-bugbear = "^21.9.2"
flake8-builtins = "^1.5.3"
flake8-pep3101 = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
virtual_env = true
from_first = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
show_traceback = true
ignore_missing_imports = true
show_error_context = true
implicit_reexport = true
pretty = true
