[package]
name = "bounce-website-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1.23.0", features = ["full"] }
tracing = { version = "0.1.37" }
yew = "0.21.0"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }

# Stellation
stellation-backend = { version = "0.2.0" }
stellation-backend-tower = { version = "0.2.0" }
stellation-backend-cli = { version = "0.2.0" }
stellation-stylist = { version = "0.2.0", features = ["backend"] }


# Example Workspace
bounce-website-view = { path = "../view" }
